# ritgard

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.props  Directory.Build.targets  LICENSE  README.md  Ritgard.sln
.config/: dotnet-tools.json
console/: .gitignore  Program.cs  Ritgard.Console.csproj  appsettings.json  plot_polygon.py  plot_trinagulation.py
data-processing/: .gitignore  README.md  adjust-positions-jobtask.py  adjust-positions-numba.py  adjust-positions.py  datatypes.py  job-positions.sh  job-terrains.sh  job-topics.sh  job.sh  model-topics.py  plot-histogram.py  plot-positions.py  plot_polygon.py  polygons.txt  pyproject.toml  ritgard.def  test.py  utils.py
data-processing/.run/: adjust-positions.run.xml  data-processing.run.xml  with MetaCentrum.run.xml  without MetaCentrum.run.xml
docs/: godot-voxel.md  ideas.md
miner/: Program.cs  Ritgard.csproj  appsettings.json
mining/: .gitignore  .graphqlrc.json  AuthorAssociation.cs  ClocInfo.cs  Comment.cs  ConversationScope.cs  Delaunator.cs  Discussion.cs  DiscussionCommentQuery.graphql  DiscussionQuery.graphql  GitHubClientCoordinator.cs  GitHubConst.cs  GitHubGraphQLClientWrapper.cs  GitHubGraphQlClientWrapper.cs  GitHubIssueJson.cs  GitHubLabelJson.cs  GitHubPullRequestJson.cs  GitHubRateLimitHandler.cs  GitHubRateLimitHeaders.cs  GitHubRateLimitedException.cs  GitHubRateLimiter.cs  GitHubRestClientWrapper.cs  GitHubRestMapping.cs  GitHubTimelineEventJson.cs  GitHubToken.cs  GitLocInfo.cs  GitReference.cs  IConversation.cs  IGitHubClientWrapper.cs  Issue.cs  IssueEvent.cs  IssueEventKind.cs  IssueState.cs  IssueStateReason.cs  IssueTopic.cs  LayoutAdjuster.cs  LockReason.cs  MergeableState.cs  Milestone.cs  MiningOptions.cs  (+22 more)
vis/: .gitignore  ActiveItem.cs  ActiveItem.cs.uid  ActiveItemEvent.cs  ActiveItemEvent.cs.uid  ActiveRepository.cs  BlockNames.cs  BlockNames.cs.uid  Blocks.cs  Blocks.cs.uid  ControlMode.cs  ControlMode.cs.uid  DatasetInfo.cs  DatasetInfo.cs.uid  FileAccessStream.cs  FileAccessStream.cs.uid  FlyingMovementMode.cs  FlyingMovementMode.cs.uid  GaussianBlur.cs  GaussianBlur.cs.uid  GodotLogger.cs  GodotLogger.cs.uid  IMovementMode.cs  IMovementMode.cs.uid  IWithVoxelLibrary.cs  IWithVoxelLibrary.cs.uid  InputActions.cs  InputActions.cs.uid  NetTopologySuiteExtensions.cs  Player.cs  Player.cs.uid  Ritgard.csproj  Ritgard.csproj.old  Ritgard.sln  SidePanel.cs  SidePanel.cs.uid  SlidingWindowPreset.cs  TopDownMovementMode.cs  TopDownMovementMode.cs.uid  Utils.Csv.cs  (+34 more)
world-generator/: ActiveItem.cs  ActiveItemEvent.cs  ActiveRepository.cs  ActiveRepository.cs.uid  Class1.cs  DatasetId.cs  GaussianBlur.cs  IslandHeightmap.cs  IslandHeightmapGenerator.cs  NetTopologySuiteExtensions.cs  NetTopologySuiteExtensions.cs.uid  SlidingWindowPreset.cs  (+7 more)
(+90 files in other folders)
