[project]
name = "ritgard"
version = "0.1.0"
description = "The data-processing bits of Ritgard."
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "bertopic[spacy]>=0.17.3",
    "bitsandbytes>=0.48.1",
    "en-core-web-sm",
    "matplotlib>=3.10.6",
    "plotly==5.24.1",
    "pydantic>=2.11.9",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
    "umap-learn>=0.5.9.post2",
    "torch>=2.8.0",
    "nltk>=3.9.2",
    "openai>=2.1.0",
    "dotenv>=0.9.9",
    "shapely>=2.1.2",
    "markdown>=3.9",
    "beautifulsoup4>=4.14.2",
    "regex>=2025.9.18",
    "flash-attn>=2.8.3 ; sys_platform == 'linux'",
    "pydantic-argparse>=0.10.0",
    "scipy-stubs~=1.16.2",
]

[dependency-groups]
dev = [
    "benchmark-imports>=1.0.0",
    "huggingface-hub[cli]>=0.35.3",
    "setuptools>=80.9.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "setuptools"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
